# BaseLib

./: .gitignore  BUILD.md  BaseLib.sln  BaseLib.vcxproj  CMakeLists.txt  architecture.md  development-plan.md  log-feature-plan.md  log-feature-redevelopment-plan.md  log-feature-test-report.md  meeting-plan.md  project-plan.md  project-summary.md  supplemental-technical-requirements.md  testing-plan.md
.github/workflows/: ci.yml
.trae/skills/developer/: SKILL.md
.trae/skills/project-manager/: SKILL.md
.trae/skills/test-engineer/: SKILL.md
algorithms/: searching.cpp  sorting.cpp
archive/api-documentation/: BaseLib-API-Documentation.md
data-structures/: linked_list.cpp  queue.cpp  stack.cpp
docs/: json-design.md  json-test-report.md  log-design.md  log-requirement.md  logger-api.md  smart_ptr-design.md
examples/: log_demo.cpp
include/: base.h  linked_list.h  queue.h  searching.h  sorting.h  stack.h
include/core/: logger.h
include/io/: filesystem.h  json.cpp  json.h  xml.cpp  xml.h
include/memory/: smart_ptr.h
include/net/: http.h  http_client.h  http_server.h  network_engine.h  tcp.h  udp.h
include/util/: config.h  error.h  lock.h  result.h  thread.h  thread_pool.h  time.h
network_test/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  network_test.cpp
scripts/: build-package.ps1  build-win32.bat  build-win64.bat  build.bat
src/core/: logger.cpp
src/io/: filesystem.cpp  json.cpp  xml.cpp
src/net/: http.cpp  http_client.cpp  http_server.cpp  network_engine.cpp  tcp.cpp  udp.cpp
src/util/: config.cpp  error.cpp  lock.cpp  thread.cpp  thread_pool.cpp  time.cpp
tests/: test-cases.md  test-plan.md  test-report.md  test_all.cpp  test_http.cpp  test_http_client.cpp  test_http_server.cpp  test_io.cpp  test_lock.cpp  test_logger.cpp  test_main.cpp  test_net.cpp  test_network_engine.cpp  test_random.cpp  test_result.cpp  test_smart_ptr.cpp  test_thread.cpp  test_util.cpp
